--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "next-quoted-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+    "name": "next-quoted-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^2.5.5",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@types/react": "^18.0.32",
+        "axios": "^1.3.4",
+        "eslint": "8.43.0",
+        "eslint-config-next": "13.4.7",
+        "firebase": "^9.19.1",
+        "formidable": "^2.1.1",
+        "formik": "^2.2.9",
+        "framer-motion": "^10.10.0",
+        "fs": "^0.0.1-security",
+        "moment": "^2.29.4",
+        "next": "13.4.7",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.8.0"
+    }
 }
